Fixing table content z-index

--- a/src/assets/scss/_v-table-custom.scss
+++ b/src/assets/scss/_v-table-custom.scss
@@ -22,6 +22,7 @@
         cursor: pointer;
         text-align: center !important;
         border-width: 0;
+        z-index: 1;
 
         &:first-child {
           text-align: left !important;
